[package]
name = "nl-wireguard"
version = "0.2.9"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
edition = "2021"
description = "Linux netlink library for wireguard management"
keywords = ["network"]
categories = ["network-programming", "os"]
readme = "README.md"

[lib]
name = "nl_wireguard"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-std"]

[dependencies]
async-std = { version = "1.13.0", optional = true}
futures-util = "0.3.11"
futures-channel = "0.3.11"
log = "0.4.26"
genetlink = { default-features = false, version = "0.2.6"}
netlink-packet-core = { version = "0.8.0"}
netlink-packet-generic = { version = "0.4.0" }
netlink-packet-wireguard = { version = "0.3.0" }
netlink-proto = { default-features = false, version = "0.12.0" }
netlink-sys = { version = "0.8.7" }
tokio = { version = "1.44.0", features = ["rt"], optional = true}
base64 = "0.22.0"

[dev-dependencies]
futures-util = "0.3.11"
env_logger = "0.10.0"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
